--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "analysis": "windicss-analysis"
   },
   "dependencies": {
+    "@vueuse/core": "^4.8.1",
     "pinia": "^2.0.0-alpha.13",
     "vue": "^3.0.9",
     "vue-router": "^4.0.6",
