--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vite-plugin-components": "^0.8.3",
     "vite-plugin-pages": "^0.9.3",
     "vite-plugin-pwa": "^0.7.0",
-    "vite-plugin-windicss": "^0.11.3",
-    "vue-tsc": "^0.0.8"
+    "vite-plugin-windicss": "^0.16.0-beta.14",
+    "vue-tsc": "^0.0.8",
+    "windicss": "^3.0.0-beta.6"
   }
 }
