--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-project",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,23 +9,25 @@
     "analysis": "windicss-analysis"
   },
   "dependencies": {
-    "@vueuse/core": "^4.8.1",
-    "pinia": "^2.0.0-alpha.13",
-    "vue": "^3.0.9",
-    "vue-router": "^4.0.6",
+    "@vueuse/core": "^5.2.0",
+    "@vueuse/head": "^0.6.0",
+    "pinia": "^2.0.0-beta.5",
+    "vue": "^3.1.5",
+    "vue-global-api": "^0.3.0",
+    "vue-router": "^4.0.10",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
-    "@vitejs/plugin-vue": "1.2.0",
-    "@vue/compiler-sfc": "^3.0.9",
-    "typescript": "^4.2.3",
-    "vite": "^2.1.3",
-    "vite-plugin-components": "^0.8.3",
-    "vite-plugin-pages": "^0.9.3",
-    "vite-plugin-pwa": "^0.7.0",
-    "vite-plugin-windicss": "^0.16.0-beta.14",
-    "vue-tsc": "^0.0.8",
-    "windicss": "^3.0.0-beta.6"
+    "@vitejs/plugin-vue": "1.3.0",
+    "@vue/compiler-sfc": "^3.1.5",
+    "typescript": "^4.3.5",
+    "vite": "^2.4.3",
+    "vite-plugin-components": "^0.13.2",
+    "vite-plugin-pages": "^0.15.1",
+    "vite-plugin-pwa": "^0.8.2",
+    "vite-plugin-windicss": "^1.2.7",
+    "vue-tsc": "^0.2.2",
+    "windicss": "^3.1.6"
   }
 }
