--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "analysis": "windicss-analysis"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.4.0",
     "@vueuse/core": "^5.2.0",
     "@vueuse/head": "^0.6.0",
     "pinia": "^2.0.0-beta.5",
     "vue": "^3.1.5",
-    "vue-global-api": "^0.3.0",
+    "vue-global-api": "^0.4.1",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.0"
   },
